Fix align-items for IE

--- a/styles/prosilver/theme/css/style.css
+++ b/styles/prosilver/theme/css/style.css
@@ -24,6 +24,7 @@
 	flex-wrap: wrap;
 	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
